playing with methods

--- a/setsandweaksets.html
+++ b/setsandweaksets.html
@@ -20,7 +20,7 @@
 
     
 
-    <script src="./assets/js/methodloops.js"></script>
+    <script src="./assets/js/setsandweaksets.js"></script>
     
   </body>
 </html>
